--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
-
-python:
-  - 2.7
-  - 3.6
+python: 3.6
 
 branches:
   only:
-  - master
+    - develop
 
 install: pip install -r requirements.txt
 script: python setup.py test
